backend/src/main/java/com/example/backend/controller/error/exception/article/NoArticleException.java
package com.example.backend.controller.error.exception.article;

public class NoArticleException extends IllegalArgumentException{
}
